--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,22 +1,9 @@
 version: '3'
 
 services: 
-  web: 
-    build: . 
-    image: app 
-    command: sh -c "python manage.py makemigrations &&
-                    python manage.py migrate &&
-                    python manage.py runserver 0.0.0.0:${APP_PORT}" 
-    volumes: 
-      - .:/microservice 
-    ports: 
-      - ${APP_PORT}:${APP_PORT} 
-    depends_on:
-      - db
-    env_file: config/.env
-    restart: "on-failure"
 
-  db: 
+  db:
+    container_name: chat_postgres
     image: ubuntu/postgres:12-20.04_beta
     volumes:
       - postgres_data:/var/lib/postgresql/data/
@@ -26,6 +13,31 @@ services:
       - POSTGRES_DB=${DB_NAME}
     env_file: config/.env
     restart: "on-failure"
+
+  web: 
+    build: . 
+    image: app 
+    command: sh -c "python manage.py makemigrations &&
+                    python manage.py migrate &&
+                    python manage.py runserver 0.0.0.0:${APP_PORT}" 
+    volumes: 
+      - .:/microservice
+      - ./static/:/microservice/static
+    ports: 
+      - ${APP_PORT}:${APP_PORT} 
+    depends_on:
+      - db
+      - redis
+    env_file: config/.env
+    restart: "on-failure"
+  
+  redis:
+    container_name: chat_redis
+    image: ubuntu/redis:6.2-22.04_beta
+    ports:
+      - '0.0.0.0:30073:6379' 
+    command: redis-server --requirepass ${REDIS_PASSWORD}
+    env_file: config/.env
 
 volumes:
   postgres_data:
