--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,24 @@
+aioredis==1.3.1
 asgiref==3.5.1
+async-timeout==4.0.2
 attrs==21.4.0
 autobahn==22.4.2
 Automat==20.2.0
 cffi==1.15.0
 channels==3.0.4
+channels-redis==3.4.0
 constantly==15.1.0
 cryptography==37.0.2
 daphne==3.0.2
 Django==4.0.4
 django-filter==21.1
 djangorestframework==3.13.1
+hiredis==2.0.0
 hyperlink==21.0.0
 idna==3.3
 incremental==21.3.0
 Markdown==3.3.7
+msgpack==1.0.3
 psycopg2-binary==2.9.3
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
